# ThisAPIOfMine

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  tsom_api_config.toml.default
.github/workflows/: build.yml
src/: app_data.rs  config.rs  deku_helper.rs  fetcher.rs  game_connection.rs  game_connection_token.rs  game_data.rs  main.rs  metaprog.rs  players.rs  token.rs  version.rs
src/data/: connection_token.rs  mod.rs  player_data.rs  token.rs
src/errors/: api.rs  fetcher.rs  mod.rs
src/fetcher/: checksum.rs  mod.rs  repo.rs  tests.rs
src/routes/: connection.rs  mod.rs  players.rs  version.rs
src/routes/connection/: mod.rs  token.rs
