[package]
name = "this_api_of_mine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
mockall = "0.13"

[dependencies]
actix-governor = "0.5"
actix-web = "4.8"
base64 = "0.22"
cached = { version = "0.52", features = ["async"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
confy = "0.6"
deadpool-postgres = "0.14"
deku = "0.17"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
octocrab = "0.38"
rand_core = "0.6"
reqwest = { version = "0.12", features = ["charset", "http2", "macos-system-configuration", "rustls-tls"], default-features = false }
secure-string = { version = "0.3", features = ["serde"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.9", features = ["base64", "time_0_3"] }
tokio = "1.38"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
url = "2.5"
uuid = { version = "1.10", features = ["v4", "macro-diagnostics", "serde"] }
